# alien

./: .gitignore  Cargo.toml  KNOWN_ISSUES  README.md  flake.nix  rustfmt.toml
src/: lib.rs  lsb.rs  main.rs  package.rs  rpm.rs  test.rs  util.rs
src/deb/: mod.rs  source.rs  target.rs
src/package/: common.rs  deb.rs  lsb.rs  rpm.rs
src/package/deb/: source.rs  target.rs
src/package/rpm/: source.rs  target.rs
src/pkg/: mod.rs  source.rs  target.rs
src/rpm/: mod.rs  source.rs  target.rs
src/tgz/: mod.rs  source.rs  target.rs
