[package]
name = "alien"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9.0"
bzip2 = "0.4.4"
clap = { version = "4.0.32", features = ["derive"] }
enum_dispatch = "0.3.10"
enumflags2 = "0.7.5"
flate2 = "1.0.25"
fs_extra = "1.2.0"
glob = "0.3.1"
nix = { version = "0.26.1", default-features = false, features = ["user"] }
once_cell = "1.17.0"
simple-eyre = "0.3.1"
tar = "0.4.38"
which = "4.3.0"
xz = "0.1.0"
