[package]
name = "alien"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9.0"
base64 = "0.21.0"
bpaf = { version = "0.7.7", features = ["derive"] }
bzip2 = "0.4.4"
color-eyre = "0.6.2"
enum_dispatch = "0.3.10"
enumflags2 = "0.7.5"
eyre = "0.6.8"
flate2 = "1.0.25"
fs_extra = "1.2.0"
glob = "0.3.1"
nix = { version = "0.26.1", default-features = false, features = ["user", "fs"] }
once_cell = "1.17.0"
simple-eyre = "0.3.1"
snailquote = "0.3.1"
subprocess = "0.2.9"
tar = "0.4.38"
time = { version = "0.3.17", features = ["local-offset", "formatting"] }
which = "4.3.0"
whoami = { version = "1.3.0", default-features = false }
xz = "0.1.0"

[profile.release]
strip = true
opt-level = "z"
lto = "thin"
